--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,13 @@
-.slide.cover h2 {
+.slide img.cover {
+    width: 1024px;
+    height: 640px;
+}
+
+.slide h3 {
     background: rgba(255, 255, 255, 0.6);
     border-radius: 10px;
     padding: 20px;
     float: left;
-}
-
-.slide.cover img {
-    width: 1024px;
-    height: 640px;
 }
 
 #me {
