--- a/styles/social-slide.css
+++ b/styles/social-slide.css
@@ -6,12 +6,10 @@
     content: ''
 }
 
-.slide.social-slide > div {
+.slide.social-slide {
     padding-top: 0;
     padding-left: 0;
     padding-right: 0;
-    width: 100%;
-    height: 100%;
 }
 
 .slide.social-slide h2 {
